--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -129,6 +129,11 @@
                                             <th scope="col">Issue Date</th>
                                             <td><t t-esc="context_timestamp(o.issue_date).strftime('%d-%m-%Y %H:%M:%S')"/></td>
                                         </tr>
+                                        <tr>
+                                            <th scope="col">Coverage Zone</th>
+                                            <td><span t-field="o.geographical_coverage" /></td>
+
+                                        </tr>
 
                                     </table>
 
@@ -166,13 +171,13 @@
                                      <div t-if="o.state =='pending'" style="position: absolute;font-size: 15rem;left: 0%;top:250px;text-transform: uppercase;z-index: 9999;-webkit-transform: rotateZ(45deg);-moz-transform: rotateZ(45deg);-ms-transform: rotateZ(45deg);-o-transform: rotateZ(45deg);transform: rotateZ(45deg);color: gray;opacity: 0.3;width: 100%;text-align: center;vertical-align: middle;">
                                          <h1 style="font-size: 15rem;text-transform: uppercase;z-index: 9999;color: gray;vertical-align: middle;">draft</h1>
                                      </div>
-                                    <table class="table table-hover">
-                                        <tr>
-                                            <th style="width:32% !important;" scope="col">Coverage Zone</th>
-                                            <td><span t-field="o.geographical_coverage" /></td>
+<!--                                    <table class="table table-hover">-->
+<!--                                        <tr>-->
+<!--                                            <th style="width:32% !important;" scope="col">Coverage Zone</th>-->
+<!--                                            <td><span t-field="o.geographical_coverage" /></td>-->
 
-                                        </tr>
-                                    </table>
+<!--                                        </tr>-->
+<!--                                    </table>-->
                                 </div>
 
 
