--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -138,7 +138,7 @@
                                     </table>
 
                                 </div>
-                                <div style="width: 33.3% !important; margin-top: 3px !important; float:left !important; padding-right:10px;">
+                                <div style="width: 33.3% !important; margin-top: -1px !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -147,7 +147,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: 3px !important;">
+                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: -1px !important;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -159,7 +159,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: 3px !important;">
+                                <div style="width: 33.3% !important; float:left !important; margin-top: -1px !important;">
                                     <table class="table table-hover">
                                         <tr>
                                             <th style="width:50% !important;" scope="col">Policy Period</th>
