--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -320,7 +320,7 @@
                                         </thead>
                                         <tbody>
                                             <t t-foreach="o.get_benefits() " t-as="ben">
-                                                <tr t-if="ben.special_covers == False">
+                                                <tr>
                                                     <!--                                                    <t t-if="o.package == 'individual'">-->
                                                     <td style="font-size: 10px !important;"><t t-esc="ben.cover" /></td>
                                                     <td style="font-size: 10px !important;"><t t-esc="ben.limit" /></td>
@@ -331,13 +331,13 @@
                                                     <!--                                                    </t>-->
                                                 </tr>
                                             </t>
-                                            <t  t-foreach="o.get_benefits()" t-as="sben">
-                                                <tr t-if="sben.special_covers == True">
-                                                    <td style="font-size: 10px !important;"><t t-esc="sben.cover" /></td>
-                                                    <td style="font-size: 10px !important;"><t t-esc="sben.limit" /></td>
+<!--                                            <t  t-foreach="o.get_benefits()" t-as="sben">-->
+<!--                                                <tr t-if="sben.special_covers == True">-->
+<!--                                                    <td style="font-size: 10px !important;"><t t-esc="sben.cover" /></td>-->
+<!--                                                    <td style="font-size: 10px !important;"><t t-esc="sben.limit" /></td>-->
 
-                                                </tr>
-                                            </t>
+<!--                                                </tr>-->
+<!--                                            </t>-->
                                         </tbody>
                                     </table>
                                 </div>
