--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -46,7 +46,7 @@
     <record id="seq_travel" model="ir.sequence">
         <field name="name">Policy</field>
         <field name="code">policy</field>
-<!--        <field name="prefix">THO/</field>-->
+        <field name="prefix"></field>
         <field name="padding">4</field>
         <!--<field name="company_id" eval="False"/>-->
     </record>
