--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -95,7 +95,7 @@
                             <field name="package" attrs="{'readonly': [('state', '=','approved')]}"/>
                             <field name="type"/>
                             <field name="issue_date" readonly="1" force_save="1"/>
-                            <field name="special_beneifts" widget="many2many_tags"/>
+<!--                            <field name="special_beneifts" widget="many2many_tags"/>-->
                         </group>
                         <group>
 
