--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -66,14 +66,14 @@
 
                         </style>
 
-                        <div class="header" style="float:left; width:100%; height:100px !important;">
+                        <div class="header" style="float:left; width:100%;">
                             <img class="img img-responsive"  style="width: 100%;" src="https://online.aropeegypt.com.eg:8069/smart_travel_agency/static/src/images/3.png"/>
                             <h4 style="color: #073e89; text-align:center;">Travel Assistance Services (TAS)</h4>
                         </div>
 
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;">
 
-                            <div  style="padding-left: 10px !important; padding-right: 10px !important; padding-top:-2px !important;">
+                            <div  style="padding-left: 10px !important; padding-right: 10px !important; padding-top:1px !important;">
 
                                 <div  style="width: 48% !important; float:left !important; padding-right:5px;">
                                     <table class="table table-hover">
@@ -138,7 +138,7 @@
                                     </table>
 
                                 </div>
-                                <div style="width: 33.3% !important; margin-top: -1px !important; float:left !important; padding-right:10px;">
+                                <div style="width: 33.3% !important; margin-top: -3px !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -147,7 +147,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: -1px !important;">
+                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: -3px !important;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -159,7 +159,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 33.3% !important; float:left !important; margin-top: -1px !important;">
+                                <div style="width: 33.3% !important; float:left !important; margin-top: -3px !important;">
                                     <table class="table table-hover">
                                         <tr>
                                             <th style="width:50% !important;" scope="col">Policy Period</th>
@@ -192,7 +192,7 @@
                                 <!--                                            </tr>-->
 
                                 <t t-if="o.price_details ==False" >
-                                    <div style="width: 100% !important; float:right !important; margin-top: -1px !important;">
+                                    <div style="width: 100% !important; float:right !important; margin-top: -3px !important;">
                                         <table class="table table-hover">
                                             <tr>
                                                 <th style=" color: #073e89; border: none !important;" scope="col">Gross Premium</th>
@@ -272,7 +272,7 @@
                                         </table>
                                     </div>
                                 </t>
-                                <div style="width: 100% !important;  float: left; margin-top: -1px !important;">
+                                <div style="width: 100% !important;  float: left; margin-top: -3px !important;">
                                     <table class="table table-hover" style="border: double #073e89 !important;">
                                         <thead>
                                             <tr style="background-color: #eee;">
@@ -310,7 +310,7 @@
                                     </table>
 
                                 </div>
-                                <div class="" style="width: 100% !important; float: left; margin-top: -1px !important;">
+                                <div class="" style="width: 100% !important; float: left; margin-top: -3px !important;">
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
