--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -138,7 +138,7 @@
                                     </table>
 
                                 </div>
-                                <div style="width: 33.3% !important; margin-top: -4px !important; float:left !important; padding-right:10px;">
+                                <div style="width: 33.3% !important; margin-top: -6px !important; float:left !important; padding-right:10px;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -147,7 +147,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: -4px !important;">
+                                <div style="width: 33.3% !important; float:left !important; padding-right:10px; margin-top: -6px !important;">
                                     <table class="table table-hover">
 
                                         <tr>
@@ -159,7 +159,7 @@
                                         </tr>
                                     </table>
                                 </div>
-                                <div style="width: 33.3% !important; float:left !important; margin-top: -4px !important;">
+                                <div style="width: 33.3% !important; float:left !important; margin-top: -6px !important;">
                                     <table class="table table-hover">
                                         <tr>
                                             <th style="width:50% !important;" scope="col">Policy Period</th>
@@ -192,7 +192,7 @@
                                 <!--                                            </tr>-->
 
                                 <t t-if="o.price_details ==False" >
-                                    <div style="width: 100% !important; float:right !important; margin-top: -4px !important;">
+                                    <div style="width: 100% !important; float:right !important; margin-top: -6px !important;">
                                         <table class="table table-hover">
                                             <tr>
                                                 <th style=" color: #073e89; border: none !important;" scope="col">Gross Premium</th>
@@ -272,7 +272,7 @@
                                         </table>
                                     </div>
                                 </t>
-                                <div style="width: 100% !important;  float: left; margin-top: -4px !important;">
+                                <div style="width: 100% !important;  float: left; margin-top: -6px !important;">
                                     <table class="table table-hover" style="border: double #073e89 !important;">
                                         <thead>
                                             <tr style="background-color: #eee;">
@@ -310,7 +310,7 @@
                                     </table>
 
                                 </div>
-                                <div class="" style="width: 100% !important; float: left; margin-top: -4px !important;">
+                                <div class="" style="width: 100% !important; float: left; margin-top: -6px !important;">
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
@@ -357,7 +357,7 @@
                                 <!--                                                    </t>-->
                                 <!--                                                </tr>-->
                                 <!--                                            </t>-->
-                                <div style="width: 50% !important; margin-top: -4px !important; float: left; white-space: nowrap !important;">
+                                <div style="width: 50% !important; margin-top: -8px !important; float: left; white-space: nowrap !important;">
                                     <!--                                    <t t-if="o.package == 'individual'">-->
                                     <ul style="padding-left:15px;font-size: 11px;">
                                         <li>The above is subject to policy terms and conditions as attached.</li>
@@ -422,7 +422,7 @@
                                         </tbody>
                                     </table>
                                 </div>
-                                <div class="" style="width: 100% !important;  float: left;">
+                                <div t-if="o.source == 'Agency'" class="" style="width: 100% !important;  float: left;">
                                     <table class="table table-hover">
                                         <thead>
                                             <tr>
@@ -450,7 +450,7 @@
                                 </div>
 
                                 <div style="margin-top:-8px !important;">
-                                    <h4 style="color: #073e89; width: 100% !important; margin-top:-4px !important; float: left; text-align:center !important;">Assistance Information</h4>
+                                    <h4 style="color: #073e89; width: 100% !important; margin-top:-6px !important; float: left; text-align:center !important;">Assistance Information</h4>
                                 </div>
                                 <!--                                </t>-->
                                 <!--                                <t t-if="o.package == 'family'">-->
