--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -394,34 +394,7 @@
                                     </t>
 
                                 </div>
-                                <div t-if="o.get_special_benefits()" class="" style="width: 100% !important; margin-top:-8px !important; float: left;">
-                                    <table class="table table-hover">
-                                        <thead>
-                                            <tr>
-                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Special Covers</th>
-                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;"></th>
-                                            </tr>
-                                            <tr>
-                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Cover</th>
-                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Limit</th>
-                                            </tr>
-                                        </thead>
-                                        <tbody>
-                                            <t t-foreach="o.get_special_benefits()" t-as="sben">
-                                                <tr>
-<!--                                                    <t t-if="o.package == 'individual'">-->
-                                                    <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>
-                                                    <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>
-<!--                                                    </t>-->
-<!--                                                    <t t-if="o.package == 'family'">-->
-<!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>-->
-<!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>-->
-<!--                                                    </t>-->
-                                                </tr>
-                                            </t>
-                                        </tbody>
-                                    </table>
-                                </div>
+
                                 <div t-if="o.source == 'Agency'" class="" style="width: 100% !important;  float: left;">
                                     <table class="table table-hover">
                                         <thead>
@@ -518,12 +491,78 @@
                             </div>
                              <div style="page-break-after: always !important;"/>
                         </div>
+                        <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;" t-if="o.package == 'individual' and o.get_special_benefits()">
+
+                            <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
+                                <div t-if="o.state =='pending'" style="position: absolute;font-size: 15rem;left: 0%;top:1250px;text-transform: uppercase;z-index: 9999;-webkit-transform: rotateZ(45deg);-moz-transform: rotateZ(45deg);-ms-transform: rotateZ(45deg);-o-transform: rotateZ(45deg);transform: rotateZ(45deg);color: gray;opacity: 0.3;width: 100%;text-align: center;vertical-align: middle;">
+                                 <h1 style="font-size: 15rem;text-transform: uppercase;z-index: 9999;color: gray;vertical-align: middle;">draft</h1>
+                             </div>
+                                <div t-if="o.get_special_benefits()" class="" style="width: 100% !important; margin-top:5px !important; float: left;">
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Special Covers</th>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;"></th>
+                                            </tr>
+                                            <tr>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Cover</th>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Limit</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <t t-foreach="o.get_special_benefits()" t-as="sben">
+                                                <tr>
+<!--                                                    <t t-if="o.package == 'individual'">-->
+                                                    <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>
+                                                    <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>
+<!--                                                    </t>-->
+<!--                                                    <t t-if="o.package == 'family'">-->
+<!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>-->
+<!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>-->
+<!--                                                    </t>-->
+                                                </tr>
+                                            </t>
+                                        </tbody>
+                                    </table>
+                                </div>
+
+                            </div>
+
+                        </div>
                         <div class="page" style="unicode-bidi: bidi-override !important; direction: unset !important;" t-if="o.package == 'family'">
 
                             <div  style="padding-left: 25px !important; padding-right: 25px !important; padding-top:1px !important;">
                                 <div t-if="o.state =='pending'" style="position: absolute;font-size: 15rem;left: 0%;top:1250px;text-transform: uppercase;z-index: 9999;-webkit-transform: rotateZ(45deg);-moz-transform: rotateZ(45deg);-ms-transform: rotateZ(45deg);-o-transform: rotateZ(45deg);transform: rotateZ(45deg);color: gray;opacity: 0.3;width: 100%;text-align: center;vertical-align: middle;">
                                  <h1 style="font-size: 15rem;text-transform: uppercase;z-index: 9999;color: gray;vertical-align: middle;">draft</h1>
                              </div>
+                                <div t-if="o.get_special_benefits()" class="" style="width: 100% !important; margin-top:5px !important; float: left;">
+                                    <table class="table table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Special Covers</th>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;"></th>
+                                            </tr>
+                                            <tr>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Cover</th>
+                                                <th style="border: none !important; font-weight:bolder !important; font-size:13px !important;" scope="col">Limit</th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <t t-foreach="o.get_special_benefits()" t-as="sben">
+                                                <tr>
+<!--                                                    <t t-if="o.package == 'individual'">-->
+                                                    <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>
+                                                    <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>
+<!--                                                    </t>-->
+<!--                                                    <t t-if="o.package == 'family'">-->
+<!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.cover" /></td>-->
+<!--                                                        <td style="font-size: 9px !important;"><t t-esc="sben.limit" /></td>-->
+<!--                                                    </t>-->
+                                                </tr>
+                                            </t>
+                                        </tbody>
+                                    </table>
+                                </div>
                                 <div  style="width: 100% !important; float:left !important;">
                                     <h4 style="color: #073e89; text-align:center; margin-top:5px !important;">Family Members</h4>
                                     <table class="table table-hover" style="border: double #073e89 !important; margin-top:1px !important;">
