--- a/views/travel_policy.xml
+++ b/views/travel_policy.xml
@@ -144,8 +144,6 @@
 
                                 <group>
                                     <field name="currency_id"/>
-                                    <field name="net_premium" readonly="1" force_save="1"/>
-                                    <field name="gross_premium" readonly="1" force_save="1"/>
                                     <field name="travel_agency_comm" readonly="1" force_save="1"/>
                                     <field name="bonus_commission" readonly="1" force_save="1"/>
                                     <field name="broker_commission" readonly="1" force_save="1"/>
@@ -153,11 +151,15 @@
 
                                 </group>
                                 <group>
-                                    <field name="supervisory_stamp" readonly="1" force_save="1"/>
-                                    <field name="issue_fees" readonly="1" force_save="1"/>
+                                    <field name="net_premium" readonly="1" force_save="1"/>
                                     <field name="proportional_stamp" readonly="1" force_save="1"/>
                                     <field name="dimensional_stamp" readonly="1" force_save="1"/>
+                                    <field name="supervisory_stamp" readonly="1" force_save="1"/>
+                                    <field name="policy_approval_fees" readonly="1" force_save="1"/>
+                                    <field name="policy_holder_fees" readonly="1" force_save="1"/>
+                                    <field name="issue_fees" readonly="1" force_save="1"/>
                                     <field name="admin_fees" />
+                                    <field name="gross_premium" readonly="1" force_save="1"/>
                                 </group>
                             </group>
                         </page>
