--- a/views/menu_item.xml
+++ b/views/menu_item.xml
@@ -34,17 +34,18 @@
                   action="benefits_action" sequence="0"/>
         <menuitem id="orders_menu" name="Orders" parent="configuration_view_menu2"
                   action="orders_action" sequence="20"/>
-
+        <menuitem action="base.action_res_users" id="users"
+                  parent="configuration_view_menu2" sequence="1" groups="smart_travel_agency.agency_group,smart_travel_agency.all_agencies_group" />
         <menuitem id="excess_menu" name="Excess" parent="configuration_view_menu2"
-                  action="excess_action" sequence="1"/>
+                  action="excess_action" sequence="2"/>
         <menuitem id="travel_menu_id" name="Travel "
                    parent="arope_conf.conf_menu"/>
         <menuitem id="price_menu" name="Price Table" parent="travel_menu_id"
-                  action="price_action" sequence="2"/>
+                  action="price_action" sequence="3"/>
         <menuitem id="price_menu_family" name="Family Package" parent="travel_menu_id"
-                  action="price_action_family" sequence="3"/>
+                  action="price_action_family" sequence="4"/>
         <menuitem id="group_menu" name="Group Discount" parent="travel_menu_id"
-                  action="group_action" sequence="4"/>
+                  action="group_action" sequence="5"/>
 
 
 
