--- a/views/rating_table.xml
+++ b/views/rating_table.xml
@@ -368,6 +368,26 @@
             </p>
         </field>
     </record>
+    <record id="users_tree_inherit" model="ir.ui.view">
+        <field name="name">Users</field>
+        <field name="model">res.users</field>
+<!--        <field name="mode">primary</field>-->
+<!--        <field name="priority" eval="500"/>-->
+        <field name="inherit_id" ref="base.view_users_tree"/>
+        <field name="arch" type="xml">
+            <tree position="attributes">
+                <attribute name="create">0</attribute>
+            </tree>
+        </field>
+    </record>
+    <record id="travel_users1" model="ir.actions.act_window">
+        <field name="name">Users</field>
+        <field name="res_model">res.users</field>
+        <field name="view_mode">tree,form</field>
+        <!--        <field name="context">{"search_default_active":1}</field>-->
+        <field name="view_id" ref="users_tree_inherit"/>
+    </record>
+
 
 
 
