--- a/reports/travel_policy_report.xml
+++ b/reports/travel_policy_report.xml
@@ -381,16 +381,16 @@
                                     <!--                                    <p style="font-size: 10px; margin-top:-10px !important;"></p>-->
                                 </div>
                                 <div style="width: 50% !important; margin-top: -2px !important; float: right; text-align:end;">
-                                    <t t-if="o.check_soucre()">
-<!--                                        <t t-if="o.package == 'individual'">-->
+                                    <t t-if="o.source != 'online'">
+                                        <t t-if="o.check_soucre()">
                                             <p style="text-align:end; font-size: 10px;">Source : HO</p>
 <!--                                        <t t-esc="o.travel_agency.agency_code" />-->
-<!--                                        </t>-->
-<!--                                        <t t-if="o.package == 'family'">-->
-<!--                                            <p style="text-align:end; font-size: 10px;">Source : OLF</p>-->
-<!--                                        </t>-->
+                                        </t>
+                                        <t t-if="o.check_soucre() == False">
+                                            <p style="text-align:end; font-size: 10px;">Source : <t t-esc="o.travel_agency.agency_code" /></p>
+                                        </t>
                                     </t>
-                                    <t t-if="o.check_soucre() == False">
+                                    <t t-if="o.source == 'online'">
                                         <p style="text-align:end; font-size: 10px;">Source : ONLN</p>
                                     </t>
 
